# kortana

./: .env.backup  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  .ruff.toml  =5.14.0  ACTIVATION_COMPLETE.md  AI_DECISION_INTEGRATION_SUMMARY.md  ALWAYS_ON_DEPLOYMENT_COMPLETE.txt  ALWAYS_ON_SYSTEM_ACTIVATED.md  ALWAYS_ON_SYSTEM_GUIDE.md  ALWAYS_ON_SYSTEM_INDEX.md  ALWAYS_ON_SYSTEM_QUICK_REFERENCE.md  ARCHITECTURE_AUDIT_COMPLETE.md  AR_VR_INTEGRATION_SUMMARY.md  AUDIT_FINALIZATION_REPORT.md  AUDIT_PACKAGE.md  AUDIT_SUMMARY.md  AUTOGEN_INTEGRATION_SUMMARY.md  AUTONOMOUS_ACTIVATION_PLAN.md  AUTONOMOUS_ACTIVATION_SUCCESS.md  AUTONOMOUS_ALWAYS_ON_RUNBOOK.md  AUTONOMOUS_FRAMEWORK_SUMMARY.md  AUTONOMOUS_VERIFICATION_GUIDE.md  BATCH10_PHASE1_COMPLETION_REPORT.md  BATCH2_SUCCESS_SUMMARY.md  BATCH_1_COMPLETION_STATUS.md  BLUEPRINT.md  BOT_PAGE_CHECKLIST.txt  BOT_PAGE_INSTRUCTIONS.txt  CHAT_TESTING_GUIDE.md  CODE_HEALTH_AUDIT_PHASE1.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_TESTING_REPORT.md  COPILOTKIT_IMPLEMENTATION_SUMMARY.md  COST_EFFECTIVE_IMPLEMENTATION_COMPLETE.md  CYBERSECURITY_INTEGRATION_SUMMARY.md  DATABASE_INFRASTRUCTURE_COMPLETE.md  DATABASE_INFRASTRUCTURE_LOCKED.md  (+383 more)
.cacheme/: copilot-key.json  inception.enc
.continue/: config.json
.github/: copilot-instructions.md  dependabot.yml
.kortana_config_test_env/: pyvenv.cfg
alembic/: env.py
archive_2025_05_30/: Kor'tana.State.md
audit_results/: AUDIT_IMPROVEMENT_SUMMARY_20260122.md  COMPREHENSIVE_AUDIT_REPORT_20260122.md  environment_validation_report_20250610_104026.md  error_report_20260122_061146.md  error_report_20260122_062008.md  file_metadata.json  health_dashboard.json  yaml_grep.txt
config/: __init__.py  default.yaml  development.yaml  dify_config_example.md  fixed_persona.json  identity.json  llm_switching_rules.json  memory_config.json  memory_patterns.json  models_config.json  persona.json  persona_Matt.json  production.yaml  sacred_trinity_config.json  schema.py
data/: brain_integration_test.jsonl  covenant_audit.jsonl  integration_workflow.jsonl  live_conversation_test.jsonl  memory.jsonl  performance_history.jsonl  reasoning.jsonl  relay_state.json  sacred_trinity_results.json  sacred_trinity_tests.json  test_integration_memory.jsonl  test_memory.jsonl  token_usage.csv
demos/: autonomy_demo.py  chat_demo.py  cost_effective_routing_demo.py  demo_multilingual.py  demo_system.py  demo_torch_flow.py  memory_demo.py  run_demos.py  test_ai_integration.py  validate_genai_setup.py
discord/: __init__.py  bot.py  config.md
discord_bot_env/: pyvenv.cfg
discord_config/: config.md
docs/: AI_DECISION_MAKING.md  API_ENDPOINTS.md  ARCHITECTURE.md  AR_VR_EXPLORATION.md  AUTOGEN_INTEGRATION.md  AUTONOMOUS_FRAMEWORK_INTEGRATION.md  AUTONOMOUS_SYSTEM_README.md  AUTONOMOUS_TESTING_FRAMEWORK.md  (+61 more)
(+1007 files in other folders)
