[tool.poetry]
name = "project-kortana"
version = "0.1.0"
description = ""
authors = ["codex-bot <codex-bot@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = ">=0.115.0"
uvicorn = {extras = ["standard"], version = ">=0.31.0"}
sqlalchemy = ">=2.0.35"
psycopg2-binary = ">=2.9.9"
alembic = ">=1.13.0"
openai = ">=1.54.0"
pydantic = ">=2.9.0"
pydantic-settings = ">=2.5.0"
sentence-transformers = ">=3.1.0"
torch = ">=2.1.0"
numpy = ">=1.26.0"
httpx = ">=0.27.0"
apscheduler = ">=3.10.4"
pinecone = ">=5.0.0"
cryptography = ">=43.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
